[gd_scene load_steps=24 format=3 uid="uid://bnjj1762pg6y4"]

[ext_resource type="Theme" uid="uid://0cjs5w3dp41y" path="res://Outros/Tema.tres" id="1_nwwym"]
[ext_resource type="Texture2D" uid="uid://dvinfaln36pau" path="res://Svgs/Estrela.svg" id="1_o3a37"]
[ext_resource type="PackedScene" uid="uid://cro733q365gpa" path="res://Cenas/Nave.tscn" id="2_wqsce"]
[ext_resource type="Script" path="res://Scripts/Jogo.gd" id="2_yt558"]
[ext_resource type="AudioStream" uid="uid://b7wd4cbrqytoy" path="res://Audios/Errou.wav" id="3_itttj"]
[ext_resource type="AudioStream" uid="uid://bldtny15hnbyw" path="res://Audios/Explosao.wav" id="3_o8iyg"]
[ext_resource type="Material" uid="uid://crspllntu7e8e" path="res://Outros/Transicao.tres" id="5_6cdna"]
[ext_resource type="Texture2D" uid="uid://cmbr06tmo5smn" path="res://Svgs/Asteroide.svg" id="6_eol3d"]
[ext_resource type="Texture2D" uid="uid://cbag6b4t3tkpl" path="res://Svgs/Nave.svg" id="7_h0ed0"]
[ext_resource type="Texture2D" uid="uid://bcv7oi7lhe5b7" path="res://Svgs/JogarNovamente.svg" id="10_ph30q"]

[sub_resource type="LabelSettings" id="LabelSettings_2nbmu"]
font_size = 44

[sub_resource type="LabelSettings" id="LabelSettings_srmrl"]
font_size = 38

[sub_resource type="Gradient" id="Gradient_sdvyw"]
offsets = PackedFloat32Array(0, 0.202346, 0.780059, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 0.968326, 0.968326, 0.968326, 1, 1, 1, 1, 0)

[sub_resource type="Animation" id="Animation_8jehj"]
resource_name = "AbrirTela"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/Diametro")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_u5yg0"]
resource_name = "AcabouSurgir"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Acabou:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Acabou:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1.1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Novamente:scale:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Novamente:scale:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../PontosFinais:scale:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.6327, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../PontosFinais:scale:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.6327, 1)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%PontosFinais:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "method"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("..")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"GirarAcabou"
}]
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("%PontosFinais:scale:x")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.633333, 1)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("%PontosFinais:scale:y")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.633333, 1)
}

[sub_resource type="Animation" id="Animation_mudor"]
resource_name = "EmCimaNovamente"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Novamente:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Novamente:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.9, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_tga3g"]
resource_name = "GirarAcabou"
length = 10.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Acabou:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 6.28319, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 10)
}

[sub_resource type="Animation" id="Animation_rpc6a"]
resource_name = "IrParaJogo"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/Diametro")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"TrocarParaJogo"
}]
}

[sub_resource type="Animation" id="Animation_jc1ue"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/Diametro")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [null]
}

[sub_resource type="Animation" id="Animation_3kifu"]
resource_name = "SaiuNovamente"
length = 0.5
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Novamente:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Novamente:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0.9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}

[sub_resource type="Animation" id="Animation_bglr4"]
resource_name = "VoltarAoInicio"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/Diametro")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("..")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"Voltar"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5kd7i"]
_data = {
"AbrirTela": SubResource("Animation_8jehj"),
"AcabouSurgir": SubResource("Animation_u5yg0"),
"EmCimaNovamente": SubResource("Animation_mudor"),
"GirarAcabou": SubResource("Animation_tga3g"),
"IrParaJogo": SubResource("Animation_rpc6a"),
"RESET": SubResource("Animation_jc1ue"),
"SaiuNovamente": SubResource("Animation_3kifu"),
"VoltarAoInicio": SubResource("Animation_bglr4")
}

[sub_resource type="LabelSettings" id="LabelSettings_m862g"]
font_size = 164

[node name="Jogo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nwwym")
script = ExtResource("2_yt558")

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 3
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Painel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -288.0
offset_right = 288.0
offset_bottom = 64.0
grow_horizontal = 2
mouse_filter = 1
mouse_default_cursor_shape = 3
metadata/_edit_use_anchors_ = true

[node name="Pontos" type="Label" parent="Painel"]
unique_name_in_owner = true
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -288.0
offset_right = -223.0
offset_bottom = 65.0
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_2nbmu")
horizontal_alignment = 2
vertical_alignment = 1
autowrap_mode = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="PontosImagem" type="TextureRect" parent="Painel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.113
anchor_right = 0.224
anchor_bottom = 0.985
offset_left = -0.201035
offset_right = -0.218033
offset_bottom = 1.02837
grow_horizontal = 2
texture = ExtResource("6_eol3d")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Vidas" type="Label" parent="Painel"]
unique_name_in_owner = true
top_level = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 224.0
offset_right = 288.0
offset_bottom = 64.0
grow_horizontal = 2
text = "3"
label_settings = SubResource("LabelSettings_2nbmu")
vertical_alignment = 1

[node name="VidaImagem" type="TextureRect" parent="Painel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.777919
anchor_right = 0.888919
anchor_bottom = 0.985
offset_left = 0.140961
offset_right = 0.0948181
offset_bottom = 0.975014
grow_horizontal = 2
texture = ExtResource("7_h0ed0")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Conta" type="Label" parent="Painel"]
unique_name_in_owner = true
top_level = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.44
anchor_right = 0.56
anchor_bottom = 0.0711111
grow_horizontal = 2
text = "3 + 3"
label_settings = SubResource("LabelSettings_srmrl")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Explosao" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_o8iyg")

[node name="Errou" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_itttj")

[node name="Estrelas" type="CPUParticles2D" parent="."]
position = Vector2(800, 500)
amount = 100
lifetime = 3.0
texture = ExtResource("1_o3a37")
emission_shape = 3
emission_rect_extents = Vector2(900, 550)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
scale_amount_min = 0.03
scale_amount_max = 0.03
color_ramp = SubResource("Gradient_sdvyw")

[node name="Nave" parent="." instance=ExtResource("2_wqsce")]
unique_name_in_owner = true
z_index = 0
position = Vector2(800, 500)
rotation = -1.5708

[node name="Asteroides" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="GerarAsteroide" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.6

[node name="Animar2" type="AnimationPlayer" parent="."]
root_node = NodePath("../Transicao")
libraries = {
"": SubResource("AnimationLibrary_5kd7i")
}

[node name="Animar" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Transicao")
libraries = {
"": SubResource("AnimationLibrary_5kd7i")
}

[node name="Animar3" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Transicao")
libraries = {
"": SubResource("AnimationLibrary_5kd7i")
}

[node name="Acabou" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4975
anchor_top = 0.422222
anchor_right = 0.4975
anchor_bottom = 0.422222
offset_left = -284.0
offset_top = -284.0
offset_right = 284.0
offset_bottom = 284.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(284, 284)
texture = ExtResource("6_eol3d")
metadata/_edit_use_anchors_ = true

[node name="PontosFinais" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -194.0
offset_right = 180.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(180, 128)
text = "999"
label_settings = SubResource("LabelSettings_m862g")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="Novamente" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -66.4
offset_top = 214.0
offset_right = 61.6
offset_bottom = 342.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(64, 64)
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource("10_ph30q")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="Transicao" type="ColorRect" parent="."]
visible = false
self_modulate = Color(0, 0, 0, 1)
top_level = true
material = ExtResource("5_6cdna")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="timeout" from="GerarAsteroide" to="." method="GerarAsteroide"]
[connection signal="button_down" from="Novamente" to="." method="Novamente"]
[connection signal="mouse_entered" from="Novamente" to="." method="EmCimaNovamente"]
[connection signal="mouse_exited" from="Novamente" to="." method="SaiuNovamente"]
